class_name VRFannoProperties
extends Control


@onready var mach_number_label : Label = $VBoxContainer/FannoMachLabel
@onready var temperature_label : Label = $VBoxContainer/FannoTempLabel
@onready var pressure_label : Label = $VBoxContainer/FannoPresLabel
@onready var density_label : Label = $VBoxContainer/FannoDensLabel
@onready var stag_temp_label : Label = $VBoxContainer/FannoStagPresLabel
@onready var stag_press_label : Label = $VBoxContainer/FannoStagPresLabel
